--- a/Assorted functions.ipynb
+++ b/Assorted functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4e5e32b3",
+   "id": "4bea75b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7789c03",
+   "id": "4ef182f7",
    "metadata": {},
    "source": [
     "### List all callable functions"
@@ -20,78 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4d0c81e4",
+   "execution_count": 4,
+   "id": "1d7eb2bf",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['acos',\n",
-       " 'acosh',\n",
-       " 'asin',\n",
-       " 'asinh',\n",
-       " 'atan',\n",
-       " 'atan2',\n",
-       " 'atanh',\n",
-       " 'ceil',\n",
-       " 'comb',\n",
-       " 'copysign',\n",
-       " 'cos',\n",
-       " 'cosh',\n",
-       " 'degrees',\n",
-       " 'dist',\n",
-       " 'erf',\n",
-       " 'erfc',\n",
-       " 'exp',\n",
-       " 'expm1',\n",
-       " 'fabs',\n",
-       " 'factorial',\n",
-       " 'floor',\n",
-       " 'fmod',\n",
-       " 'frexp',\n",
-       " 'fsum',\n",
-       " 'gamma',\n",
-       " 'gcd',\n",
-       " 'hypot',\n",
-       " 'isclose',\n",
-       " 'isfinite',\n",
-       " 'isinf',\n",
-       " 'isnan',\n",
-       " 'isqrt',\n",
-       " 'ldexp',\n",
-       " 'lgamma',\n",
-       " 'log',\n",
-       " 'log10',\n",
-       " 'log1p',\n",
-       " 'log2',\n",
-       " 'modf',\n",
-       " 'perm',\n",
-       " 'pow',\n",
-       " 'prod',\n",
-       " 'radians',\n",
-       " 'remainder',\n",
-       " 'sin',\n",
-       " 'sinh',\n",
-       " 'sqrt',\n",
-       " 'tan',\n",
-       " 'tanh',\n",
-       " 'trunc']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'comb', 'copysign', 'cos', 'cosh', 'degrees', 'dist', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'isclose', 'isfinite', 'isinf', 'isnan', 'isqrt', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'perm', 'pow', 'prod', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'trunc']\n"
+     ]
     }
    ],
    "source": [
-    "[method_name for method_name in dir(math) if callable(getattr(math, method_name))]"
+    "print([method_name for method_name in dir(math) if callable(getattr(math, method_name))])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61bd8e06",
+   "id": "45b9c088",
    "metadata": {},
    "outputs": [],
    "source": []
