--- a/Assorted functions.ipynb
+++ b/Assorted functions.ipynb
@@ -42,7 +42,10 @@
    "id": "45b9c088",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://stackoverflow.com/questions/10212445/map-list-item-to-function-with-arguments",
+    "#https://stackoverflow.com/questions/10212445/map-list-item-to-function-with-arguments"
+   ]
   }
  ],
  "metadata": {
