--- a/Assorted functions.ipynb
+++ b/Assorted functions.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://stackoverflow.com/questions/10212445/map-list-item-to-function-with-arguments",
+    "map(lambda p: myFunc(p, additionalArgument), pages)\n",
     "#https://stackoverflow.com/questions/10212445/map-list-item-to-function-with-arguments"
    ]
   }
