--- a/Assorted functions.ipynb
+++ b/Assorted functions.ipynb
@@ -46,6 +46,17 @@
     "map(lambda p: myFunc(p, additionalArgument), pages)\n",
     "#https://stackoverflow.com/questions/10212445/map-list-item-to-function-with-arguments"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45b9c088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in ratio_funcs:\n",
+    "    print(f('date time', 'datetime'))",
+   ]
   }
  ],
  "metadata": {
