--- a/Assorted functions.ipynb
+++ b/Assorted functions.ipynb
@@ -46,6 +46,40 @@
     "map(lambda p: myFunc(p, additionalArgument), pages)\n",
     "#https://stackoverflow.com/questions/10212445/map-list-item-to-function-with-arguments"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3c3e9ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratios[f] = max(list(map(lambda irr_col: f(irr_col, i.lower()), irrelevant_columns)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84742719",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71afba77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef7369fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
