--- a/Assorted functions.ipynb
+++ b/Assorted functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4bea75b4",
+   "id": "46e4eff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef182f7",
+   "id": "3b661d9a",
    "metadata": {},
    "source": [
     "### List all callable functions"
@@ -20,26 +20,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1d7eb2bf",
+   "execution_count": 5,
+   "id": "37cbf940",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'comb', 'copysign', 'cos', 'cosh', 'degrees', 'dist', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'isclose', 'isfinite', 'isinf', 'isnan', 'isqrt', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'perm', 'pow', 'prod', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'trunc']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['acos',\n",
+       " 'acosh',\n",
+       " 'asin',\n",
+       " 'asinh',\n",
+       " 'atan',\n",
+       " 'atan2',\n",
+       " 'atanh',\n",
+       " 'ceil',\n",
+       " 'comb',\n",
+       " 'copysign',\n",
+       " 'cos',\n",
+       " 'cosh',\n",
+       " 'degrees',\n",
+       " 'dist',\n",
+       " 'erf',\n",
+       " 'erfc',\n",
+       " 'exp',\n",
+       " 'expm1',\n",
+       " 'fabs',\n",
+       " 'factorial',\n",
+       " 'floor',\n",
+       " 'fmod',\n",
+       " 'frexp',\n",
+       " 'fsum',\n",
+       " 'gamma',\n",
+       " 'gcd',\n",
+       " 'hypot',\n",
+       " 'isclose',\n",
+       " 'isfinite',\n",
+       " 'isinf',\n",
+       " 'isnan',\n",
+       " 'isqrt',\n",
+       " 'ldexp',\n",
+       " 'lgamma',\n",
+       " 'log',\n",
+       " 'log10',\n",
+       " 'log1p',\n",
+       " 'log2',\n",
+       " 'modf',\n",
+       " 'perm',\n",
+       " 'pow',\n",
+       " 'prod',\n",
+       " 'radians',\n",
+       " 'remainder',\n",
+       " 'sin',\n",
+       " 'sinh',\n",
+       " 'sqrt',\n",
+       " 'tan',\n",
+       " 'tanh',\n",
+       " 'trunc']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print([method_name for method_name in dir(math) if callable(getattr(math, method_name))])"
+    "obj_name = math\n",
+    "[method_name for method_name in dir(obj_name) if callable(getattr(obj_name, method_name))]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b9c088",
+   "id": "c1718681",
    "metadata": {},
    "outputs": [],
    "source": []
